force-app/main/default/objects/Quote_Line_Detail__c/Quote_Line_Detail__c.object-meta.xml
<CustomObject>
    <label>Quote Line Detail</label>
    <nameField>
        <displayFormat>QLD-{000000}</displayFormat>
        <label>Quote Line Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>