force-app/main/default/objects/Quote_Line_Detail__c/fields/Access_Method__c.field-meta.xml
<CustomField>
    <fullName>Access_Method__c</fullName>
    <label>Access Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Method</valueSetName>
    </valueSet>
</CustomField>