force-app/main/default/objects/Quote_Line_Detail__c/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation</label>
    <referenceTo>Activation__c</referenceTo>
    <relationshipLabel>Quote Line Details</relationshipLabel>
    <relationshipName>Quote_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>