force-app/main/default/objects/Quote_Line_Detail__c/fields/Activation_Check_del__c.field-meta.xml
<CustomField>
    <fullName>Activation_Check_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation Check</label>
    <referenceTo>Activation_Check__c</referenceTo>
    <relationshipLabel>Quote Line Details</relationshipLabel>
    <relationshipName>Quote_Line_Details_del</relationshipName>
    <type>Lookup</type>
</CustomField>