force-app/main/default/objects/Quote_Line_Detail__c/fields/Activation_Line__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation Line</label>
    <referenceTo>Activation_line__c</referenceTo>
    <relationshipLabel>Quote Line Details</relationshipLabel>
    <relationshipName>Quote_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>