force-app/main/default/objects/Quote_Line_Detail__c/fields/Activation_progress__c.field-meta.xml
<CustomField>
    <fullName>Activation_progress__c</fullName>
    <label>Activation progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activation_progress</valueSetName>
    </valueSet>
</CustomField>