force-app/main/default/objects/Quote_Line_Detail__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrator</label>
    <type>Checkbox</type>
</CustomField>