force-app/main/default/objects/Quote_Line_Detail__c/fields/Attendant_Agent_login__c.field-meta.xml
<CustomField>
    <fullName>Attendant_Agent_login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendant Agent login</label>
    <type>Checkbox</type>
</CustomField>