force-app/main/default/objects/Quote_Line_Detail__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Quote Line Details</relationshipLabel>
    <relationshipName>Quote_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>