force-app/main/default/objects/Quote_Line_Detail__c/fields/Category_and_Feature__c.field-meta.xml
<CustomField>
    <fullName>Category_and_Feature__c</fullName>
    <description>Formula holding values of category and feature separated by &quot;;&quot;. Values used are Name of Feature and value from Category field on the Feature record.</description>
    <formula>TEXT( Quote_Line__r.SBQQ__ProductOption__r.SBQQ__Feature__r.SBQQ__Category__c ) + &apos;;&apos; + Quote_Line__r.SBQQ__ProductOption__r.SBQQ__Feature__r.Name</formula>
    <inlineHelpText>This is name of Feature and Category from related product.</inlineHelpText>
    <label>Category and Feature</label>
    <type>Text</type>
</CustomField>