force-app/main/default/objects/Quote_Line_Detail__c/fields/Changes_List_to_a_Service__c.field-meta.xml
<CustomField>
    <fullName>Changes_List_to_a_Service__c</fullName>
    <description>This field is holding list of changes done to the service like: adding or substracting any addons like HBO to/from number.</description>
    <inlineHelpText>List of changes in IT friendly format.</inlineHelpText>
    <label>Changes List to a Service</label>
    <length>2600</length>
    <type>LongTextArea</type>
</CustomField>