force-app/main/default/objects/Quote_Line_Detail__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <label>Circuit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>