force-app/main/default/objects/Quote_Line_Detail__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conference</label>
    <type>Checkbox</type>
</CustomField>