force-app/main/default/objects/Quote_Line_Detail__c/fields/Conference_Phones__c.field-meta.xml
<CustomField>
    <fullName>Conference_Phones__c</fullName>
    <label>Conference Phones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conference_Phones</valueSetName>
    </valueSet>
</CustomField>