force-app/main/default/objects/Quote_Line_Detail__c/fields/Contact_person_on_site__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_on_site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact person on site</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Details</relationshipLabel>
    <relationshipName>Quote_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>