force-app/main/default/objects/Quote_Line_Detail__c/fields/CPE_ID__c.field-meta.xml
<CustomField>
    <fullName>CPE_ID__c</fullName>
    <label>CPE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>