force-app/main/default/objects/Quote_Line_Detail__c/fields/Create_Order_Line_Detail__c.field-meta.xml
<CustomField>
    <fullName>Create_Order_Line_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to fire a flow that creates an Order Line details record from the updated Quote line detail.</description>
    <label>Create Order Line Detail</label>
    <type>Checkbox</type>
</CustomField>