force-app/main/default/objects/Quote_Line_Detail__c/fields/Data_Usage_Analyzer__c.field-meta.xml
<CustomField>
    <fullName>Data_Usage_Analyzer__c</fullName>
    <description>Field used in Matrix solution to get name of icon to use in matrix to indicate the need toupgrade of package. If one of icons is not ok one need to find new one from list here: https://www.lightningdesignsystem.com/icons/ and replace the old one with new one in formula.
IF( OR( Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c=0 , ISBLANK( Avg_Monthly_Data_Used_MB__c ), ISBLANK( Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c ), Avg_Monthly_Data_Used_MB__c=0 ),
 &apos;standard:question_feed&apos;, 
 IF( ( Avg_Monthly_Data_Used_MB__c / Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c ) &gt; 0.9, &apos;standard:incident&apos;, &apos;standard:care_request_reviewer&apos; ) )</description>
    <formula>IF( Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c=0,
 &apos;utility:help&apos;, 
 IF( ( Avg_Monthly_Data_Used_MB__c / Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c ) &gt; 0.9, &apos;utility:arrowup&apos;, &apos;utility:arrowdown&apos; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field holds name of icon we want to use to indicate status of data usage.</inlineHelpText>
    <label>Data Usage Analyzer</label>
    <type>Text</type>
</CustomField>