force-app/main/default/objects/Quote_Line_Detail__c/fields/Delivery_Street_and_number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street_and_number__c</fullName>
    <label>Delivery Street and number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>