force-app/main/default/objects/Quote_Line_Detail__c/fields/Detail_Identificator__c.field-meta.xml
<CustomField>
    <fullName>Detail_Identificator__c</fullName>
    <description>This field has been created to be a single identificator of Quote Line Detail.</description>
    <formula>Mobile_no__c + Fixed_no__c</formula>
    <inlineHelpText>This is number related to this service</inlineHelpText>
    <label>Detail Identificator</label>
    <type>Text</type>
</CustomField>