force-app/main/default/objects/Quote_Line_Detail__c/fields/Dont_send_to_Activation_del__c.field-meta.xml
<CustomField>
    <fullName>Dont_send_to_Activation_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t send to Activation</label>
    <type>Checkbox</type>
</CustomField>