force-app/main/default/objects/Quote_Line_Detail__c/fields/eID__c.field-meta.xml
<CustomField>
    <fullName>eID__c</fullName>
    <description>eID for eSim card</description>
    <label>eID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>