force-app/main/default/objects/Quote_Line_Detail__c/fields/Ekstra_Data_SIM_number_4__c.field-meta.xml
<CustomField>
    <fullName>Ekstra_Data_SIM_number_4__c</fullName>
    <label>Ekstra Data SIM number 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>