force-app/main/default/objects/Quote_Line_Detail__c/fields/Express_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Express_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If product option Express Delivery har been selected this checkbox will be true</description>
    <label>Express Delivery</label>
    <type>Checkbox</type>
</CustomField>