force-app/main/default/objects/Quote_Line_Detail__c/fields/Extra_ACD_k_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Extra_ACD_k_Quantity__c</fullName>
    <label>Extra ACD queue Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>