force-app/main/default/objects/Quote_Line_Detail__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>