force-app/main/default/objects/Quote_Line_Detail__c/fields/Fokus_SOC__c.field-meta.xml
<CustomField>
    <fullName>Fokus_SOC__c</fullName>
    <label>Fokus SOC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>