force-app/main/default/objects/Quote_Line_Detail__c/fields/Forbrugskontrol_amount_TBD__c.field-meta.xml
<CustomField>
    <fullName>Forbrugskontrol_amount_TBD__c</fullName>
    <label>Forbrugskontrol amount TBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50 DKK</fullName>
            </value>
            <value>
                <fullName>100 DKK</fullName>
            </value>
            <value>
                <fullName>150 DKK</fullName>
            </value>
            <value>
                <fullName>200 DKK</fullName>
            </value>
            <value>
                <fullName>250 DKK</fullName>
            </value>
            <value>
                <fullName>300 DKK</fullName>
            </value>
            <value>
                <fullName>350 DKK</fullName>
            </value>
            <value>
                <fullName>400 DKK</fullName>
            </value>
            <value>
                <fullName>450 DKK</fullName>
            </value>
            <value>
                <fullName>500 DKK</fullName>
            </value>
            <value>
                <fullName>550 DKK</fullName>
            </value>
            <value>
                <fullName>600 DKK</fullName>
            </value>
            <value>
                <fullName>650 DKK</fullName>
            </value>
            <value>
                <fullName>700 DKK</fullName>
            </value>
            <value>
                <fullName>750 DKK</fullName>
            </value>
            <value>
                <fullName>800 DKK</fullName>
            </value>
            <value>
                <fullName>850 DKK</fullName>
            </value>
            <value>
                <fullName>900 DKK</fullName>
            </value>
            <value>
                <fullName>950 DKK</fullName>
            </value>
            <value>
                <fullName>1000 DKK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>