force-app/main/default/objects/Quote_Line_Detail__c/fields/Foreign_circuit__c.field-meta.xml
<CustomField>
    <fullName>Foreign_circuit__c</fullName>
    <label>Foreign circuit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>