force-app/main/default/objects/Quote_Line_Detail__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Type</valueSetName>
    </valueSet>
</CustomField>