force-app/main/default/objects/Quote_Line_Detail__c/fields/IP_routes__c.field-meta.xml
<CustomField>
    <fullName>IP_routes__c</fullName>
    <label>IP routes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>