force-app/main/default/objects/Quote_Line_Detail__c/fields/Is_UC_Licenses_updated__c.field-meta.xml
<CustomField>
    <fullName>Is_UC_Licenses_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UC Licenses updated?</label>
    <type>Checkbox</type>
</CustomField>