force-app/main/default/objects/Quote_Line_Detail__c/fields/Landline_no__c.field-meta.xml
<CustomField>
    <fullName>Landline_no__c</fullName>
    <label>Landline no.</label>
    <type>Phone</type>
</CustomField>