force-app/main/default/objects/Quote_Line_Detail__c/fields/M2M__c.field-meta.xml
<CustomField>
    <fullName>M2M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M2M</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Line Details (M2M)</relationshipLabel>
    <relationshipName>Quote_Line_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>