force-app/main/default/objects/Quote_Line_Detail__c/fields/Main_Service_Upgrade_Checker__c.field-meta.xml
<CustomField>
    <fullName>Main_Service_Upgrade_Checker__c</fullName>
    <description>This field is checking if  there is difference between original Data limit and current. As result it provides names of Salesforce icons from : https://www.lightningdesignsystem.com/icons/ that should be displayed in renewal editor.</description>
    <formula>if(  Original_Available_Monthly_Data_MB__c !=  Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c,
   if( Original_Available_Monthly_Data_MB__c &gt; Quote_Line__r.SBQQ__Product__r.Available_Monthly_Data_MB__c , &apos;utility:chevrondown&apos;, &apos;utility:chevronup&apos; ),
   &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field should be hidden.</inlineHelpText>
    <label>Main Service Upgrade Checker</label>
    <type>Text</type>
</CustomField>