force-app/main/default/objects/Quote_Line_Detail__c/fields/MobileFixedCircuit__c.field-meta.xml
<CustomField>
    <fullName>MobileFixedCircuit__c</fullName>
    <formula>IF( ISBLANK(Mobile_no__c) , IF(ISBLANK(Fixed_no__c), Circuit_ID__c, Fixed_no__c), Mobile_no__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobileFixedCircuit</label>
    <type>Text</type>
</CustomField>