force-app/main/default/objects/Quote_Line_Detail__c/fields/Modified_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Modified_delivery_date__c</fullName>
    <label>Modified delivery date</label>
    <type>Date</type>
</CustomField>