force-app/main/default/objects/Quote_Line_Detail__c/fields/New_Dual_card__c.field-meta.xml
<CustomField>
    <fullName>New_Dual_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Dual card</label>
    <type>Checkbox</type>
</CustomField>