force-app/main/default/objects/Quote_Line_Detail__c/fields/Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>Offer_ID__c</fullName>
    <label>Offer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>