force-app/main/default/objects/Quote_Line_Detail__c/fields/Original_Available_Monthly_Data_MB__c.field-meta.xml
<CustomField>
    <fullName>Original_Available_Monthly_Data_MB__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field is populated on Insert of QLD and is holding Available Monthly Data (MB) from original Product. In case of number being moved to new service ( like upgrade from 10Gig to 20 Gig ) we will use it to check if it was downgrade or upgrade.</description>
    <label>Original Available Monthly Data (MB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>