force-app/main/default/objects/Quote_Line_Detail__c/fields/PoA__c.field-meta.xml
<CustomField>
    <fullName>PoA__c</fullName>
    <label>PoA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>